Reworked backend to work with quarkus
- Removed spring-boot
- Implemented quarkus